open logging file in append mode

--- a/logging.conf
+++ b/logging.conf
@@ -26,7 +26,7 @@ formatter=defaultFormatter
 
 [handler_fileHandler]
 class=FileHandler
-args=("output.log", "w")
+args=("output.log", "a")
 level=DEBUG
 formatter=defaultFormatter
 
